fix for breadcrumb/legend overlap
git-svn-id: http://ala-portal.googlecode.com/svn/trunk/ala-portal-web@415 1ef1b718-b4f5-11dd-90a5-ed332e521da9

--- a/src/main/webapp/skins/ala/speciesGlobal.css
+++ b/src/main/webapp/skins/ala/speciesGlobal.css
@@ -760,7 +760,7 @@ div.subcontainer {
 
 /* Breadcrumbs */
 #breadcrumbs {
-	margin-top: 25px;
+	margin-top: 80px;
 	padding: 0px;
 	border-top: 1px solid #CCCCCC;
 	font-size: 11px;
